merged [9515] from 6.1
svn changeset:9516/svn branch:6.2